k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:830279064856:certificate/80cf94a6-c1e3-442a-bd7f-b3a907718601

    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
    - host: api.maheshmaharana.online

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 80
